--- a/src/app/index.module.scss
+++ b/src/app/index.module.scss
@@ -6,24 +6,140 @@
   height: 100vh;
   display: flex;
   flex-direction: row;
-  column-gap: 24px;
+  // column-gap: 24px;
 
   .first{
-    width: 20%;
-    border: 1px solid $white;
+    width: 24%;
     height: 100%;
+    padding: 40px 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    .header{
+
+      .img{
+        margin-bottom: 52px;
+        width: 80px;
+      }
+
+      .starter{
+        font-size: 46px;
+        font-weight: 800;
+        text-transform: capitalize;
+        margin-bottom: 4px;
+        letter-spacing: 2px;
+
+        span{
+          padding: 4px 20px;
+          color: $black;
+          background: $lime;
+          border-radius: 9999px;
+        }
+
+        .blue{
+          background: $blue;
+          color: $white;
+        }
+      }
+
+      .auth{
+        margin-top: 40px;
+
+        a{
+          font-size: 24px;
+          margin-right: 16px;
+          font-weight: 300;
+          letter-spacing: 0px;
+          color: $grey-200;
+          width: fit-content;
+          text-transform: capitalize;
+
+          &:hover{
+            opacity: 1;
+            color: $lime;
+            font-weight: 800;
+          }
+
+          &:last-child{
+            margin-right: 0;
+          }
+        }
+      }
+    }
+
+    .footer{
+      display: flex;
+      flex-direction: column;
+
+      a{
+        color: $grey-200;
+        margin-bottom: 8px;
+        font-weight: 300;
+
+        &:hover{
+          color: $lime;
+        }
+      }
+    }
   }
   
   .second{
     width: 20%;
-    border: 1px solid $white;
     height: 100%;
     flex-grow: 1;
+    box-shadow:inset 0 0 0 2000px rgba(255, 0, 150, 0.3);
+    background: url('https://trygrip.co/_nuxt/common/abstract_bg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    overflow: visible;
+
+    .content{
+      display: flex;
+      flex-direction: row;
+
+      img{
+        width: 500px;
+        position: absolute;
+      }
+
+      .img1{
+        left: 60px;
+        top: 100px;
+      }
+      
+      .img2{
+        right: 60px;
+        bottom: 100px;
+      }
+      
+    }
   }
 
   .third{
-    width: 10%;
-    border: 1px solid $white;
+    width: 11%;
     height: 100%;
+    padding: 40px 24px;
+    display: flex;
+    align-items: flex-end;
+
+    p{
+      font-size: 18px;
+      font-weight: 300;
+      margin-bottom: 10px;
+      text-transform: capitalize;
+
+      max-width: 80px;
+    }
+
+    img{
+      width: 100px;
+      border-radius: 4px;
+    }
   }
 }
