--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -7,7 +7,8 @@
 body {
   background: $black;
   min-height: 100vh;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Chakra Petch', sans-serif;
+  cursor: crosshair;
 }
 
 input, select, textarea, button {
@@ -24,8 +25,9 @@ button {
   cursor: pointer;
 }
 
-p {
+p, a {
   font-size: 16px;
   color: $white;
   margin: 0;
+  text-decoration: none;
 }
