--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -31,3 +31,16 @@ p, a {
   margin: 0;
   text-decoration: none;
 }
+
+p, a, span {
+  &::selection {
+    color: $black;
+    background-color: $lime;
+  }
+  
+  /* for firefox */
+  &::moz-selection {
+    color: $black;
+    background-color: $lime;
+  }
+}
