--- a/src/app/index.module.scss
+++ b/src/app/index.module.scss
@@ -1,12 +1,22 @@
 @import '/src/assets/scss/base/variables';
 
+
+.under{
+  max-width: 1440px;
+  margin: auto;
+  height: 100vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 .main{
   max-width: 1440px;
   margin: auto;
   height: 100vh;
   display: flex;
   flex-direction: row;
-  // column-gap: 24px;
 
   .first{
     width: 24%;
@@ -22,24 +32,29 @@
         margin-bottom: 52px;
         width: 80px;
       }
+      
+      .cover{
+        overflow: hidden;
 
-      .starter{
-        font-size: 46px;
-        font-weight: 800;
-        text-transform: capitalize;
-        margin-bottom: 4px;
-        letter-spacing: 2px;
+        .starter{
+          font-size: 46px;
+          font-weight: 800;
+          text-transform: uppercase;
+          margin-bottom: 8px;
+          margin-top: 8px;
+          letter-spacing: 2px;
 
-        span{
-          padding: 4px 20px;
-          color: $black;
-          background: $lime;
-          border-radius: 9999px;
-        }
+          span{
+            padding: 4px 20px;
+            color: $black;
+            background: $lime;
+            border-radius: 9999px;
+          }
 
-        .blue{
-          background: $blue;
-          color: $white;
+          .blue{
+            background: $blue;
+            color: $white;
+          }
         }
       }
 
@@ -53,7 +68,7 @@
           letter-spacing: 0px;
           color: $grey-200;
           width: fit-content;
-          text-transform: capitalize;
+          text-transform: uppercase;
 
           &:hover{
             opacity: 1;
@@ -75,7 +90,9 @@
       a{
         color: $grey-200;
         margin-bottom: 8px;
+        font-size: 14px;
         font-weight: 300;
+        text-transform: uppercase;
 
         &:hover{
           color: $lime;
@@ -97,7 +114,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    overflow: visible;
+    overflow: hidden;
 
     .content{
       display: flex;
@@ -117,7 +134,6 @@
         right: 60px;
         bottom: 100px;
       }
-      
     }
   }
 
@@ -129,11 +145,10 @@
     align-items: flex-end;
 
     p{
-      font-size: 18px;
+      font-size: 14px;
       font-weight: 300;
       margin-bottom: 10px;
-      text-transform: capitalize;
-
+      text-transform: uppercase;
       max-width: 80px;
     }
 
